--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,5 @@
-<h1>à propos</h1>
-
-<p>Afin de garantir un miel bio, les équipes Beaumiel procèdent à de nombreuses analyses en laboratoire.</p>
+<ng-container *transloco="let t">
+    <h1>{{ t(trPath+'.title') }}</h1>
+    
+    <p>{{ t(trPath+'.text') }}</p>
+</ng-container>
