--- a/src/app/containers/header/header.component.html
+++ b/src/app/containers/header/header.component.html
@@ -1,28 +1,30 @@
-<header class="header">
-    <nav class="nav">
+<ng-container *transloco="let t">
+    <header class="header">
+        <nav class="nav">
 
-        <div class="nav_outer">
-            <a routerLink="/" 
-                (click)="scrollToTop()">
-                <img src="assets/img/logo.jpg" alt="abeille"/>
-                <span>Beaumiel</span>
-            </a>
-        </div>
-        
-        <app-language-selector></app-language-selector>
+            <div class="nav_outer">
+                <a routerLink="/" 
+                    (click)="scrollToTop()">
+                    <img src="assets/img/logo.jpg" alt="abeille"/>
+                    <span>Beaumiel</span>
+                </a>
+            </div>
+            
+            <app-language-selector></app-language-selector>
 
-        <app-burger-btn 
-            [navDisplay] = "navDisplay"
-            (navDisplayState)="receiveNavDisplayState($event)"
-            *ngIf="isMobile"></app-burger-btn>
+            <app-burger-btn 
+                [navDisplay] = "navDisplay"
+                (navDisplayState)="receiveNavDisplayState($event)"
+                *ngIf="isMobile"></app-burger-btn>
 
-        <ul (click)="hideNav()" 
-            class="nav_inner"
-            [ngClass]="navDisplay ? 'show_nav' : null">
-            <li><a routerLink="/">accueil</a></li>
-            <li><a routerLink="/fr/about">à propos</a></li>
-            <li><a routerLink="/fr/contact">contact</a></li>
-            <li><a routerLink="/fr/test">test</a></li>
-        </ul>
-    </nav>
-</header>
+            <ul (click)="hideNav()" 
+                class="nav_inner"
+                [ngClass]="navDisplay ? 'show_nav' : null">
+                <li><a routerLink="/">{{ t('containers.header.homeLink') }}</a></li>
+                <li><a routerLink="/fr/about">{{ t('containers.header.aboutLink') }}</a></li>
+                <li><a routerLink="/fr/contact">{{ t('containers.header.contactLink') }}</a></li>
+                <li><a routerLink="/fr/test">{{ t('containers.header.testLink') }}</a></li>
+            </ul>
+        </nav>
+    </header>
+</ng-container>
