multilanguage switch button and OSM added

--- a/src/app/containers/header/header.component.html
+++ b/src/app/containers/header/header.component.html
@@ -21,9 +21,9 @@
                 class="nav_inner"
                 [ngClass]="navDisplay ? 'show_nav' : null">
                 <li><a routerLink="/">{{ t('containers.header.homeLink') }}</a></li>
-                <li><a routerLink="/fr/about">{{ t('containers.header.aboutLink') }}</a></li>
-                <li><a routerLink="/fr/contact">{{ t('containers.header.contactLink') }}</a></li>
-                <li><a routerLink="/fr/test">{{ t('containers.header.testLink') }}</a></li>
+                <li><a routerLink="/about">{{ t('containers.header.aboutLink') }}</a></li>
+                <li><a routerLink="/contact">{{ t('containers.header.contactLink') }}</a></li>
+                <li><a routerLink="/test">{{ t('containers.header.testLink') }}</a></li>
             </ul>
         </nav>
     </header>
