--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -4,5 +4,6 @@
         <article>
             <p>{{ t(trPath+'.text') }}</p>
         </article>
+        <app-google-map></app-google-map>
     </section>
 </ng-container>
