products and detail pages added

--- a/src/app/containers/header/header.component.html
+++ b/src/app/containers/header/header.component.html
@@ -20,7 +20,7 @@
             <ul (click)="hideNav()" 
                 class="nav_inner"
                 [ngClass]="navDisplay ? 'show_nav' : null">
-                <li><a routerLink="/">{{ t('containers.header.homeLink') }}</a></li>
+                <li><a routerLink="/honey">{{ t('containers.header.honeyLink') }}</a></li>
                 <li><a routerLink="/about">{{ t('containers.header.aboutLink') }}</a></li>
                 <li><a routerLink="/contact">{{ t('containers.header.contactLink') }}</a></li>
                 <li><a routerLink="/test">{{ t('containers.header.testLink') }}</a></li>
