--- a/client/src/app/pages/detail/detail.component.scss
+++ b/client/src/app/pages/detail/detail.component.scss
@@ -1,6 +1,7 @@
 @import '../../../variables.scss';
 
 .detail_section {
+    margin: auto auto 4rem;
 
     .main_info_div {
         margin: 1rem 0;
@@ -46,6 +47,8 @@
         }
 
         >img {
+            margin: 2rem auto;
+
             @media screen and (min-width: $tablet) {
                 width: 50%;
                 margin-right: 2rem;
@@ -101,11 +104,11 @@
         p {
             color: green;
             & + p {
-                margin-bottom: 2rem;
+                margin-top: 2rem;
             }
         }
 
-        .bold {
+        .discount {
             font-weight: 700;
         }
     }
