--- a/client/src/app/pages/honey/honey.component.scss
+++ b/client/src/app/pages/honey/honey.component.scss
@@ -5,6 +5,7 @@
     grid-template-columns: 1fr;
     gap: 1rem;
     width: 100%;
+    margin: 1rem auto 2rem;
 
     @media screen and (min-width: $tablet){
         grid-template-columns: 1fr 1fr;
