--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-header></app-header>
 <main>
+    <div class="loader" *ngIf="isLoading">
+        <div>Loading...</div>
+    </div>
     <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
