--- a/client/src/app/containers/card/card.component.html
+++ b/client/src/app/containers/card/card.component.html
@@ -1,9 +1,10 @@
-<article class="product">
-    <h2>nom du miel</h2>
+<article class="product" *ngIf="honey">
+    <h2>{{honey.name}}</h2>
+    <p class="subtitle_text">{{honey.subtitle}}</p>
 
-    <img src="assets/img/products/honey_01_big.jpg" alt="honey_01">
+    <img src='{{"assets/img/products/honey_0"+honey.id+"_big.jpg"}}' alt='{{"honey_0"+honey.id}}'/>
 
-    <p class="price_text">prix €</p>
+    <p class="price_text"><span>à partir de</span>{{honey.price}} €</p>
 
-    <a routerLink="detail/01">voir ce produit</a>
+    <a routerLink='{{"detail/0"+honey.id}}'>voir ce produit</a>
 </article>
