SignIn page and authentification added

--- a/client/src/app/containers/header/header.component.html
+++ b/client/src/app/containers/header/header.component.html
@@ -24,6 +24,7 @@
                 <li><a routerLink="/about">{{ t('containers.header.aboutLink') }}</a></li>
                 <li><a routerLink="/contact">{{ t('containers.header.contactLink') }}</a></li>
                 <li><a routerLink="/test">{{ t('containers.header.testLink') }}</a></li>
+                <li><a routerLink="/user/signin">{{ t('containers.header.signinLink') }}</a></li>
             </ul>
         </nav>
     </header>
