--- a/client/src/app/pages/user/signin/signin.component.html
+++ b/client/src/app/pages/user/signin/signin.component.html
@@ -1,5 +1,5 @@
 <ng-container *transloco="let t">
-<section class="signin">
+<section class="sign">
     <p *ngIf="logMsg && !email && !password" class="ok_msg">{{logMsg}}</p> 
     <p *ngIf="errMsg" class="err_msg">{{errMsg}}</p>
     
@@ -35,7 +35,7 @@
         <button type="submit">{{ t(trPath+'.form.buttonText') }}</button> 
     </form>
 
-    <p class="signup_txt">{{ t(trPath+'.notHaveAccount') }} <a routerLink="/user/signup">{{ t(trPath+'.createAccount') }}</a></p>
+    <p class="redirect_txt">{{ t(trPath+'.notHaveAccount') }} <a routerLink="/user/signup">{{ t(trPath+'.createAccount') }}</a></p>
 
 </section>
 </ng-container>
