get API data on language change fixed

--- a/client/src/app/containers/card/card.component.html
+++ b/client/src/app/containers/card/card.component.html
@@ -6,5 +6,5 @@
 
     <p class="price_text"><span>à partir de</span>{{honey.price}} €</p>
 
-    <a routerLink='{{"detail/0"+honey.id}}'>voir ce produit</a>
+    <a routerLink='{{"/detail/0"+honey.id}}'>voir ce produit</a>
 </article>
