--- a/client/src/app/pages/detail/detail.component.scss
+++ b/client/src/app/pages/detail/detail.component.scss
@@ -76,7 +76,7 @@
             padding: .8rem 1.2rem;
             border: none;
             border-radius: 6px;
-            font-size: 2rem;
+            font-size: 1.8rem;
             letter-spacing: .2rem;
             color: white;
             background-color: #b09067;
@@ -85,11 +85,22 @@
                 color: black;
                 background-color: rgba(176, 144, 103, 0.5);
             }
+
+            fa-icon {
+                padding-right: 1rem;
+            }
         }
 
-        fa-icon {
-            color: tomato;
-            padding: 0 .5rem;
+        .add_to_wishlist_btn {
+            padding: .4rem .8rem;
+            border: none;
+            font-weight: 600;
+            background-color: white;
+
+            fa-icon {
+                color: tomato;
+                padding: 0 .5rem;
+            }
         }
     }
 
