--- a/client/src/app/pages/honey/honey.component.html
+++ b/client/src/app/pages/honey/honey.component.html
@@ -1,7 +1,7 @@
 <ng-container *transloco="let t">
     <h1>{{ t(trPath+'.title') }}</h1>
     
-    <section class="products_section">
+    <section class="products_section" *ngIf="honeys?.length">
         <app-card *ngFor="let honey of honeys" [honey]="honey"></app-card>
     </section>
 </ng-container>
