cart component & button added

--- a/client/src/app/containers/header/header.component.html
+++ b/client/src/app/containers/header/header.component.html
@@ -12,6 +12,8 @@
             
             <app-language-selector></app-language-selector>
 
+            <app-cart-btn></app-cart-btn>
+
             <app-burger-btn 
                 [navDisplay] = "navDisplay"
                 (navDisplayState)="receiveNavDisplayState($event)"
