--- a/client/src/app/pages/detail/detail.component.html
+++ b/client/src/app/pages/detail/detail.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="bottom_info_div">
-        <img src='{{"assets/img/products/honey_0"+honey.id+"_big.jpg"}}' alt='{{"honey_0"+honey.id}}'/>
+        <img src="{{'assets/img/products/honey_0'+honey.id+'_big.jpg'}}" alt="{{'honey_0'+honey.id}}"/>
 
         <select name="object">
             <option 
