--- a/client/src/app/pages/user/signin/signin.component.html
+++ b/client/src/app/pages/user/signin/signin.component.html
@@ -1,14 +1,12 @@
 <ng-container *transloco="let t">
 <section class="sign">
-    <p *ngIf="logMsg && !email && !password" class="ok_msg">{{logMsg}}</p> 
-    <p *ngIf="errMsg" class="err_msg">{{errMsg}}</p>
     
     <h1>{{ t(trPath+'.title') }}</h1>
 
     <form [formGroup]="signinForm" (ngSubmit)="onSubmit()" class="sign_form">
 
         <label> 
-            <fa-icon [icon]="faUser" class="input_icon"></fa-icon>
+            <fa-icon [icon]="faEnvelope" class="input_icon"></fa-icon>
             <input type="email" 
                     name="email" 
                     placeholder="{{ t(trPath+'.form.emailPlaceholder') }}"
