--- a/client/src/app/containers/burger-btn/burger-btn.component.scss
+++ b/client/src/app/containers/burger-btn/burger-btn.component.scss
@@ -1,7 +1,6 @@
 @import '../../../variables.scss';
 $btn-height: 36px;
 
-/* ------------ THE BURGER BUTTON ------------- */
 .burger_btn {
     position: absolute;
     top: calc(($header-height - $btn-height) / 2);
@@ -20,7 +19,7 @@ $btn-height: 36px;
         display: none;
     }
 
-    .burger_icon {
+    >fa-icon {
         font-size: 2.4rem;
     }
 }
