--- a/client/src/app/pages/user/signup/signup.component.html
+++ b/client/src/app/pages/user/signup/signup.component.html
@@ -1,18 +1,25 @@
 <ng-container *transloco="let t">
     <section class="sign">
-        <p *ngIf="logMsg && !email && !password" class="ok_msg">{{logMsg}}</p> 
-        <p *ngIf="errMsg" class="err_msg">{{errMsg}}</p>
-        
+
         <h1>{{ t(trPath+'.title') }}</h1>
     
         <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="sign_form">
 
             <label> 
-                <fa-icon [icon]="faUser" class="input_icon"></fa-icon>
+                <fa-icon [icon]="faUserReg" class="input_icon"></fa-icon>
                 <input type="text" 
-                        name="name" 
-                        placeholder="{{ t(trPath+'.form.namePlaceholder') }}"
-                        formControlName="name"
+                        name="firstName" 
+                        placeholder="{{ t(trPath+'.form.firstNamePlaceholder') }}"
+                        formControlName="firstName"
+                        (focus)="isSubmitted = false"/>
+            </label>
+
+            <label> 
+                <fa-icon [icon]="faUserSolid" class="input_icon"></fa-icon>
+                <input type="text" 
+                        name="lastName" 
+                        placeholder="{{ t(trPath+'.form.lastNamePlaceholder') }}"
+                        formControlName="lastName"
                         (focus)="isSubmitted = false"/>
             </label>
     
@@ -86,4 +93,4 @@
         <p class="redirect_txt">{{ t(trPath+'.haveAccount') }} <a routerLink="/user/signin">{{ t(trPath+'.signinHere') }}</a></p>
     
     </section>
-    </ng-container>
+</ng-container>
