Server: express-validator added; Client: dotenv implemented, Local Storage service added

--- a/client/src/app/containers/card/card.component.html
+++ b/client/src/app/containers/card/card.component.html
@@ -2,7 +2,7 @@
     <h2>{{honey.name}}</h2>
     <p class="subtitle_text">{{honey.subtitle}}</p>
 
-    <img src='{{"assets/img/products/honey_0"+honey.id+"_big.jpg"}}' alt='{{"honey_0"+honey.id}}'/>
+    <img src="{{imgUrl+'products/honey_0'+honey.id+'_big.jpg'}}" alt='{{"honey_0"+honey.id}}'/>
 
     <p class="price_text"><span>à partir de</span>{{honey.price}} €</p>
 
