--- a/client/src/app/containers/cart-item/cart-item.component.html
+++ b/client/src/app/containers/cart-item/cart-item.component.html
@@ -1,5 +1,5 @@
 <article class="cart_item">
-    <img src="{{'assets/img/products/honey_01_small.jpg'}}" alt="{{'honey_0'}}"/>
+    <img src="{{imgUrl+'products/honey_01_small.jpg'}}" alt="{{'honey_0'}}"/>
 
     <div class="info_div">
         <div class="titles_div">
