--- a/client/src/app/containers/header/header.component.html
+++ b/client/src/app/containers/header/header.component.html
@@ -5,7 +5,7 @@
             <div class="nav_outer">
                 <a routerLink="/" 
                     (click)="scrollToTop()">
-                    <img src="assets/img/logo.jpg" alt="abeille"/>
+                    <img src="{{imgUrl+'logo.jpg'}}" alt="abeille"/>
                     <span>Beaumiel</span>
                 </a>
             </div>
